2008-04-27 -- 0.7.1

  * Fixed: Bogus syntax error when parsing URIs with port-like
      passwords, e.g. "http://user:21@host/" (#1948038)
      Thanks to Friedrich Delgado Friedrichs for reporting!
  * Fixed: Parser did not handle trailing slashes correctly in some cases,
      which also made the structures produced from parsing "http://e.com/"
      and "http://e.com" indistinguishable. (#1950126)
      Thanks to Edward Z. Yang for reporting!

2008-04-04 -- 0.7.0

  * Added: Dissection and composition of query strings
  * Added: Documentation improvements
      (in|out|inout indicators, addition of \since and \see)
  * Changed: Code::Blocks project files updated from file format
      version 1.4 to 1.6, which is produced by Code::Blocks 8.02
  * Added: Code::Blocks workspace file
  * Changed: Soname set to 1:5:0

2008-02-25 -- 0.6.4

  * Added: Syntax-based normalization can now handle relative URIs,
      e.g. "../../a/b/.././c" is normalized to "../../a/c"
  * Fixed: Normalization code could free foreign memory
  * Fixed: Normalization processed the path segment even when asked not to
  * Added: MinGW Makefile and related readme
      Thanks to Michael Anthony Puls II!
  * Fixed: Documentation bug not requiring enough memory for the output
      buffer when converting a relative file URI back to a filename
  * Changed: Soname set to 1:4:0

2008-02-11 -- 0.6.3

  * Fixed: Two major crash bugs in normalization code
      Thanks to Adrian Manrique for the patch!
  * Added: Brief usage tutorial
  * Changed: Soname set to 1:3:0

2008-02-08 -- 0.6.2

  * Fixed: Freeing a normalized URI like "http://test?"
      caused a crash. Thanks to Adrian Manrique for reporting!
  * Fixed: Filename <--> URI string conversion helpers can
      now handle relative URIs and filenames
  * Changed: Soname set to 1:2:0

2007-12-23 -- 0.6.1

  * Fixed: Percent-encodings in hostnames were not repaired during normalization.
      Thanks to Adrian Manrique for reporting!