@@ -55,8 +55,8 @@
 /* Version */
 #define URI_VER_MAJOR           0
 #define URI_VER_MINOR           7
-#define URI_VER_RELEASE         1
-#define URI_VER_SUFFIX_ANSI     ""
+#define URI_VER_RELEASE         2
+#define URI_VER_SUFFIX_ANSI     "beta"
 #define URI_VER_SUFFIX_UNICODE  URI_ANSI_TO_UNICODE(URI_VER_SUFFIX_ANSI)
 
 
