@@ -1,3 +1,13 @@
+???
+
+  * Fixed: Bad cleanup logic in functions
+      - uriAddBaseUri
+      - uriRemoveBaseUri
+      Previously you needed to call uriFreeUriMembers on return code
+      URI_ERROR_MALLOC and only that. So that's why these functions now
+      take cleanup off your shoulders. An extra uriFreeUriMembers
+      from your side is still needed in case of success.
+
 2008-04-27 -- 0.7.1
 
   * Fixed: Bogus syntax error when parsing URIs with port-like
